Added logic to set custom images for init container and sidecar
